front-end/src/styles/Home.css
.home-container {
  @apply p-6 rounded-lg shadow-md bg-white max-w-2xl;
  @apply mx-auto my-8;
  @apply min-h-[80vh] p-6 rounded-lg shadow-md bg-white max-w-4xl mx-auto;
}
.box {
  @apply p-4 rounded-md bg-cyan-100 my-4;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.box h2 {
  @apply text-2xl font-semibold text-black;
}

.home-money {
  @apply font-medium;
}

.home-title {
  @apply text-center font-extrabold text-2xl;
}

.home-list {
  @apply rounded-lg p-4 mt-4;
}

.home-list2 {
  @apply py-4 border-b border-gray-300 flex justify-between;
}

.home-expense-text {
  @apply text-lg font-semibold;
}

.home-expense-amount {
  @apply text-gray-600;
}

